--- a/index.html
+++ b/index.html
@@ -421,8 +421,8 @@
 
     <section id="closing">
       <div class="container">
-        <h2>Contact</h2>
-        <div class="closing-text">
+        <h2 class="popup">Contact</h2>
+        <div class="closing-text popup">
           <p>
             Thank you for visiting this portfolio. Hopefully, this journey
             through skills, experiences, and projects has provided valuable
