--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="banner-wrapper">
         <div class="container">
           <div class="banner-text">
-            <h1 class="popup">Damas <span>Bahagia</span></h1>
+            <h1 class="popup">Damas <span data-text="Bahagia">Bahagia</span></h1>
             <h3 class="popup">I'm <span class="typewriter-text"></span></h3>
             <a href="#about" class="btn"
               ><i class="bx bxs-chevrons-down"></i
@@ -464,7 +464,7 @@
               placeholder="Message"
               style="resize: none"
             ></textarea>
-            <button type="submit" class="popup">Submit</button>
+            <button type="submit" class=" button popup">Submit</button>
           </form>
         </div>
       </div>
