ADDED DARK MODE

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
           <a href="#education">Education</a>
           <a href="#experiences">Experiences</a>
           <a href="#closing">Contact</a>
+          <label class="toggle-switch">
+            <input type="checkbox" id="darkModeToggle" />
+            <span class="slider">
+              <ion-icon name="sunny" class="toggle-icon"></ion-icon>
+            </span>
+          </label>
         </nav>
         <div id="overlay" onclick="closeMenubar()"></div>
       </div>
@@ -36,11 +42,13 @@
       <div class="banner-wrapper">
         <div class="container">
           <div class="banner-text">
-            <h1 class="popup">Damas <span data-text="Bahagia">Bahagia</span></h1>
+            <h1 class="popup">
+              Damas <span data-text="Bahagia">Bahagia</span>
+            </h1>
             <h3 class="popup">I'm <span class="typewriter-text"></span></h3>
-            <a href="#about" class="btn"
-              ><i class="bx bxs-chevrons-down"></i
-            ></a>
+            <a href="#about" class="btn">
+              <i class="bx bxs-chevrons-down"></i>
+            </a>
           </div>
         </div>
       </div>
@@ -464,7 +472,7 @@
               placeholder="Message"
               style="resize: none"
             ></textarea>
-            <button type="submit" class=" button popup">Submit</button>
+            <button type="submit" class="button popup">Submit</button>
           </form>
         </div>
       </div>
