--- a/thanks.html
+++ b/thanks.html
@@ -37,7 +37,7 @@
         <div class="container">
             <h2 class="popup">Thank You!</h2>
             <p class="popup">Thank you for sending me a message. We appreciate your effort and will respond to you as soon as possible! Your message has been received by me. Please check your email (including the spam folder) for further updates.</p>
-            <a href="index.html#home" class="popup">Back to Home</a>
+            <a href="index.html#home" class="popup button">Back to Home</a>
         </div>
     </section>
 
