--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Damas Bahagia Ika Cipta</title>
   </head>
   <body>
-    <header>
+    <header  id="header">
       <div class="container">
         <div class="logo">
           <h3>D B I CIPTA</h3>
