--- a/index.html
+++ b/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-10KVRL6RJL"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-10KVRL6RJL");
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <script defer src="assets/script/script.js"></script>
     <script defer src="assets/script/scrollreveal.min.js"></script>
-    <title></title>
+    <title>D B I CIPTA</title>
   </head>
   <body>
     <header id="header">
-      <div class="logo">
-        <h3>D B I CIPTA</h3>
-      </div>
+      <div class="logo">D B I CIPTA</div>
       <div class="menu-bar" onclick="openMenu()">
         <ion-icon name="menu-outline"></ion-icon>
       </div>
@@ -36,11 +48,11 @@
       <section id="hero" data-title="HOME">
         <div class="container">
           <div class="banner-text">
-            <h1 class="popup">DAMAS BAHAGIA</h1>
+            <h1 class="popup">DAMAS <span>BAHAGIA</span></h1>
             <h2 class="popup">I'm <span class="typewriter-text"> </span></h2>
-            <a class="popup" href="index.html#about"
-              ><ion-icon name="chevron-down"></ion-icon
-            ></a>
+            <a class="popup" href="index.html#about">
+              <i class="bx bxs-chevron-down-circle"></i>
+            </a>
           </div>
         </div>
       </section>
@@ -224,7 +236,7 @@
                   <h3 class="timeline-date popup">September 2023 - Present</h3>
                 </div>
                 <div class="timeline-center">
-                  <div class="timeline-circle edu ut">
+                  <div class="timeline-circle edu ut popup">
                     <img src="assets/img/ut.png" alt="UT" />
                   </div>
                 </div>
