--- a/index.html
+++ b/index.html
@@ -22,9 +22,26 @@
     <script defer src="assets/script/scrollreveal.min.js"></script>
     <title>D B I CIPTA</title>
   </head>
-  <body>
+  <body class="dark-mod">
     <header id="header">
-      <div class="logo">D B I CIPTA</div>
+      <div class="logo" onclick="toggleDropdown()">
+        <i class="bx bx-chevron-down"></i>
+        <h4>D B I CIPTA</h4>
+        <div class="dropdown" id="themeDropdown">
+          <button onclick="setTheme('light')">
+            <ion-icon name="sunny"></ion-icon>
+            <p>Light Mode</p>
+          </button>
+          <button onclick="setTheme('dark')">
+            <ion-icon name="moon"></ion-icon>
+            <p>Dark Mode</p>
+          </button>
+          <button onclick="setTheme('system')">
+            <ion-icon name="laptop"></ion-icon>
+            <p>System Default</p>
+          </button>
+        </div>
+      </div>
       <div class="menu-bar" onclick="openMenu()">
         <ion-icon name="menu-outline"></ion-icon>
       </div>
@@ -34,12 +51,6 @@
         <a href="index.html#education">Education</a>
         <a href="index.html#experiences">Experiences</a>
         <a href="index.html#contact">Contact</a>
-        <label class="toggle-switch">
-          <input type="checkbox" id="darkModeToggle" />
-          <span class="slider">
-            <ion-icon name="sunny" class="toggle-icon"></ion-icon>
-          </span>
-        </label>
       </nav>
       <div id="overlay" onclick="closeMenu()"></div>
     </header>
@@ -483,6 +494,7 @@
             </p>
             <button class="btn" onclick="closePopup()">close</button>
           </div>
+          <div class="popup-overlay"></div>
         </div>
       </section>
     </main>
