--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <script defer src="assets/script/scrollreveal.min.js"></script>
     <title>D B I CIPTA</title>
   </head>
-  <body class="dark-mod">
+  <body>
     <header id="header">
       <div class="logo" onclick="toggleDropdown()">
-        <i class="bx bx-chevron-down"></i>
+        <i id="dropdownIcon" class="bx bx-chevron-down"></i>
         <h4>D B I CIPTA</h4>
         <div class="dropdown" id="themeDropdown">
           <button onclick="setTheme('light')">
@@ -43,7 +43,11 @@
         </div>
       </div>
       <div class="menu-bar" onclick="openMenu()">
-        <ion-icon name="menu-outline"></ion-icon>
+        <div class="hamburger">
+          <span class="line"></span>
+          <span class="line"></span>
+          <span class="line"></span>
+        </div>
       </div>
       <nav id="navbar">
         <a href="index.html#hero" class="current">Home</a>
@@ -477,6 +481,7 @@
                 autocomplete="off"
                 required
                 placeholder=""
+                rows="1"
               ></textarea>
               <label for="message" class="label">Message</label>
             </div>
