--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
@@ -502,8 +502,10 @@
               <label for="message" class="label">Message</label>
             </div>
             <button type="submit" class="btn">
-              Send Message
-              <i class="bx bxs-send"></i>
+              <div class="btn-container">
+                <span>Send Message</span>
+                <ion-icon name="send-outline"></ion-icon>
+              </div>
             </button>
           </form>
           <div id="popup-message" class="popup-message">
