--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script defer src="assets/script/scrollreveal.min.js"></script>
     <title>D B I CIPTA</title>
   </head>
-  <body class="light-mode">
+  <body>
     <header id="header">
       <div class="container">
         <div class="logo" onclick="toggleDropdown()">
